hybrid_platform: Add support for SCHED_BALANCED
Add support for a trade-off scheduling mechanism between _SPE and _NSPE
for hybrid platform topologies.
A new flag in the mailbox partition manifest allows a configurable
scheduling for different interrupt sources.
Documentation explains the behaviour and how to set this, basically via
setting CONFIG_TFM_HYBRID_PLAT_SCHED_TYPE to
TFM_HYBRID_PLAT_SCHED_BALANCED.

Signed-off-by: Nicola Mazzucato <nicola.mazzucato@arm.com>
Change-Id: Id883ba9e5f1748d60d1ed2db027979a9ef44954d

--- a/tools/templates/partition_load_info.template
+++ b/tools/templates/partition_load_info.template
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021-2025, Arm Limited. All rights reserved.
+ * SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
  * Copyright (c) 2021-2023 Cypress Semiconductor Corporation (an Infineon
  * company) or an affiliate of Cypress Semiconductor Corporation. All rights
  * reserved.
@@ -278,6 +278,7 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
             {% set irq_info.client_id_base = irq.source + "_CLIENT_ID_BASE" %}
             {% set irq_info.client_id_limit = irq.source + "_CLIENT_ID_LIMIT" %}
         {% endif %}
+        {% set irq_info.mbox_flags = irq.mbox_flags %}
         {
             .init = {{irq_info.source_symbol + "_init"}},
             .flih_func = {{irq_info.flih_func}},
@@ -287,6 +288,11 @@ const struct partition_{{manifest.name|lower}}_load_info_t {{manifest.name|lower
         {% if manifest.ns_agent is sameas true %}
             .client_id_base = {{irq_info.client_id_base}},
             .client_id_limit = {{irq_info.client_id_limit}},
+        {% endif %}
+        {% if irq.mbox_flags is defined %}
+            .mbox_flags = {{irq_info.mbox_flags}},
+        {% else %}
+            .mbox_flags = MBOX_IRQ_FLAGS_NONE,
         {% endif %}
         },
     {% endfor %}
