SPM: ns_agent_tz: Introduce reentrancy checks for NSPE calls
The local NSPE is not aware when there is a secure service in action
caused by a remote client, via mailbox for example.
By default, the behaviour is to panic/fault if local NSPE attempts to
reenter into secure state.

Introduce an optional basic testing mechanism to check and set a flag
if, at the time NSPE makes a psa_call, TF-M was not processing a secure
service.
The flag is successfully set and cleared based on successful tests
on the V8-M stack Integrity Signature and it is only accessible via
the TrustZone NS API.

This feature is enabled by TFM_TZ_REENTRANCY_CHECK and only
available for Armv8.0-M onward.

The default configuration is `OFF`.

Signed-off-by: Nicola Mazzucato <nicola.mazzucato@arm.com>
Change-Id: Ib4f113cdb8903089b7b6dd7842004dff29b94daf

--- a/secure_fw/partitions/ns_agent_tz/CMakeLists.txt
+++ b/secure_fw/partitions/ns_agent_tz/CMakeLists.txt
@@ -34,6 +34,7 @@ target_sources(tfm_s
     PRIVATE
         "$<$<IN_LIST:${TFM_SYSTEM_ARCHITECTURE},${ARM_V80M_ARCH}>:${CMAKE_CURRENT_SOURCE_DIR}/psa_api_veneers_v80m.c>"
         "$<$<NOT:$<IN_LIST:${TFM_SYSTEM_ARCHITECTURE},${ARM_V80M_ARCH}>>:${CMAKE_CURRENT_SOURCE_DIR}/psa_api_veneers.c>"
+        "$<$<BOOL:${TFM_TZ_REENTRANCY_CHECK}>:${CMAKE_CURRENT_SOURCE_DIR}/psa_api_veneers_common.c>"
 )
 
 target_compile_definitions(tfm_config
