LIB: Move partitions to use new logging API
Make use of the new unprivileged logging API throughout the secure
partitions. This mainly does drop in replacements for the existing
macros to the new LOG_UNPRIV macros.

Note that as part of this change, we replace the existing remove
tfm_sp_log_raw.c which implemented the vprintf standard library
function. This function is still by some platforms and external
libraries in TF-M and therefore we add a new implementation which makes
use of the implementation in the new unpriv logging library.

Change-Id: I58c7f71fabab0984fe42560c6c20ca313bd5aa60
Signed-off-by: Jackson Cooper-Driver <jackson.cooper-driver@arm.com>

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2024, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -25,7 +25,7 @@ target_include_directories(psa_crypto_library_config
 # CC log level is controlled indirectly through the SP log level. When SP log is
 # disabled we can assume that the CC log should also be turned off. Otherwise,
 # enable only if debugging information may be needed.
-if(${TFM_PARTITION_LOG_LEVEL} STREQUAL TFM_PARTITION_LOG_LEVEL_SILENCE)
+if(${TFM_PARTITION_LOG_LEVEL} STREQUAL LOG_LEVEL_NONE)
     set(CC_LOG_ENABLED OFF)
 else()
     set(CC_LOG_ENABLED $<CONFIG:Debug,relwithdebinfo>)
