--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2020-2022, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 # Copyright (c) 2023 Cypress Semiconductor Corporation (an Infineon company)
 # or an affiliate of Cypress Semiconductor Corporation. All rights reserved.
 #
@@ -26,13 +26,13 @@ target_sources(tfm_sprt
         $<$<C_COMPILER_ID:Clang>:crt_start.c>
         $<$<C_COMPILER_ID:Clang>:crt_exit.c>
         $<$<C_COMPILER_ID:Clang>:crt_strlen.c>
+        crt_vprintf.c
         service_api.c
         ${CMAKE_SOURCE_DIR}/secure_fw/shared/crt_memcpy.c
         ${CMAKE_SOURCE_DIR}/secure_fw/shared/crt_memset.c
         $<$<BOOL:${CONFIG_TFM_PARTITION_META}>:./sprt_partition_metadata_indicator.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:./sfn_common_thread.c>
         $<$<BOOL:${CONFIG_TFM_SPM_BACKEND_IPC}>:./psa_api_ipc.c>
-        $<$<BOOL:${TFM_SP_LOG_RAW_ENABLED}>:./tfm_sp_log_raw.c>
         $<$<BOOL:${TFM_SP_LOG_RAW_ENABLED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_sp_logdev_periph.c>
 )
 
@@ -42,42 +42,22 @@ target_link_libraries(tfm_sprt
         tfm_spm_defs
         tfm_config
         platform_s
-        tfm_vprintf
+        tfm_vprintf_headers
+        tfm_log_unpriv_headers
     PRIVATE
         tfm_spm
         psa_crypto_config
+        tfm_vprintf
+        tfm_log_unpriv
 )
 
 target_compile_definitions(tfm_config
     INTERFACE
-        TFM_PARTITION_LOG_LEVEL=${TFM_PARTITION_LOG_LEVEL}
+        LOG_LEVEL_UNPRIV=${TFM_PARTITION_LOG_LEVEL}
         $<$<BOOL:${TFM_SP_LOG_RAW_ENABLED}>:TFM_SP_LOG_RAW_ENABLED>
 )
 
 target_include_directories(tfm_sprt
     INTERFACE
         $<BUILD_INTERFACE:$<$<BOOL:${CONFIG_TFM_PARTITION_META}>:${CMAKE_CURRENT_SOURCE_DIR}/include>>
-)
-
-
-# A dedicated logging target
-add_library(tfm_sp_log STATIC)
-target_include_directories(tfm_sp_log
-    PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-)
-
-target_sources(tfm_sp_log
-    PRIVATE
-        tfm_sp_log_raw.c
-        ${CMAKE_SOURCE_DIR}/platform/ext/common/tfm_hal_sp_logdev_periph.c
-)
-
-target_link_libraries(tfm_sp_log
-    PUBLIC
-        tfm_spm_defs
-        tfm_config
-        platform_s
-    PRIVATE
-        tfm_spm
 )
