LIB: Change tfm_log_unpriv to INTERFACE library
Follows the same logic as in
ac7219e2dcf4465204d6a3970883f0d3a6ec4096.

Change-Id: I211cb321d442bac74fc62c966e2330f75ad91271
Signed-off-by: Jackson Cooper-Driver <jackson.cooper-driver@arm.com>

--- a/lib/tfm_log_unpriv/CMakeLists.txt
+++ b/lib/tfm_log_unpriv/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2024, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -8,10 +8,10 @@
 cmake_minimum_required(VERSION 3.21)
 
 add_library(tfm_log_unpriv_headers INTERFACE)
-add_library(tfm_log_unpriv STATIC)
+add_library(tfm_log_unpriv INTERFACE)
 
 target_sources(tfm_log_unpriv
-    PRIVATE
+    INTERFACE
         src/tfm_log_unpriv.c
 )
 
@@ -21,16 +21,7 @@ target_include_directories(tfm_log_unpriv_headers
 )
 
 target_link_libraries(tfm_log_unpriv
-    PUBLIC
+    INTERFACE
         tfm_log_unpriv_headers
         tfm_vprintf
-    PRIVATE
-        tfm_sprt
-)
-
-# Not actually used by the tfm_log library but required
-# to prevent preprocessor error on undefined LOG_LEVEL_UNPRIV
-target_compile_definitions(tfm_log_unpriv
-    PRIVATE
-        LOG_LEVEL_UNPRIV=0
 )
