LIB: Use tfm_log for BL2 logging
Make use of the new tfm_log library for logging from BL2. We achieve
this by redefining the MCUBOOT_LOG_ macros in TF-M to use the tfm_log
macros instead of printf. The log level is mapped from the configured
MCUBoot value to the value used by tfm_log and we add a CPP check to
ensure that the two match correctly.

Change-Id: I6dd24bd53008a779ab5fa282153a8c8d5c4e5741
Signed-off-by: Jackson Cooper-Driver <jackson.cooper-driver@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -1,5 +1,5 @@
 #------------------------------------------------------------------------------
-# Copyright (c) 2020-2024, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -72,8 +72,7 @@ target_link_libraries(bl2
         bootutil
 )
 
-set(MCUBOOT_ALLOWED_LOG_LEVELS OFF ERROR WARNING INFO DEBUG)
-list(FIND MCUBOOT_ALLOWED_LOG_LEVELS ${MCUBOOT_LOG_LEVEL} LOG_LEVEL_ID)
+set(LOG_LEVEL_ID ${BL2_LOG_LEVEL})
 
 if (MCUBOOT_ALIGN_VAL GREATER 8)
 set (MCUBOOT_BOOT_MAX_ALIGN ${MCUBOOT_ALIGN_VAL})
