Platform: Add custom __assert_func for BL1/2
This patch adds a definition for __assert_func, which is the function
called if an assertion fails in C. We redefine the default function to
instead use the tfm_log library, therefore removing the dependency on
libc. After logging the issue, the function just spins in a while (1).

Note that because of the removed dependency, this results in a
significant size reduction for BL1_1 and BL2.

Change-Id: I79f514d92fcd1766fea9c464aff09b1f5832984a
Signed-off-by: Jackson Cooper-Driver <jackson.cooper-driver@arm.com>

--- a/platform/CMakeLists.txt
+++ b/platform/CMakeLists.txt
@@ -204,6 +204,7 @@ if(BL2)
             $<$<BOOL:${PLATFORM_DEFAULT_OTP}>:ext/common/template/otp_flash.c>
             $<$<BOOL:${BL2_SANITIZE}>:ext/common/tfm_sanitize_handlers.c>
             ./ext/common/tfm_fatal_error.c
+            ./ext/common/tfm_assert.c
     )
 
     target_link_libraries(platform_bl2
@@ -309,6 +310,7 @@ if(BL1 AND PLATFORM_DEFAULT_BL1)
             $<$<BOOL:${PLATFORM_DEFAULT_OTP}>:ext/common/template/otp_flash.c>
             $<$<OR:$<BOOL:${BL1_1_SANITIZE}>,$<BOOL:${TFM_BL1_2_SANITIZE}>>:ext/common/tfm_sanitize_handlers.c>
             ./ext/common/tfm_fatal_error.c
+            ./ext/common/tfm_assert.c
     )
 
     target_link_libraries(platform_bl1_1
