LIB: Remove log/log_unpriv dependencies
Remove these to ensure that these interface targets only provide the
tfm_log.c and tfm_log_unpriv.c source files and nothing else. This
allows targets to individually link the tfm_vprintf.c source file.

Change-Id: I5c00665d361ff9fab5b6316104d5a743336b8917
Signed-off-by: Jackson Cooper-Driver <jackson.cooper-driver@arm.com>

--- a/bl1/bl1_1/shared_lib/CMakeLists.txt
+++ b/bl1/bl1_1/shared_lib/CMakeLists.txt
@@ -37,6 +37,7 @@ target_link_libraries(bl1_1_shared_lib
     PUBLIC
         bl1_1_shared_lib_interface
         tfm_log
+        tfm_vprintf
     PRIVATE
         platform_bl1_1
 )
