--- a/lib/tfm_log/CMakeLists.txt
+++ b/lib/tfm_log/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2024, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -23,6 +23,4 @@ target_include_directories(tfm_log_headers
 target_link_libraries(tfm_log
     INTERFACE
         tfm_log_headers
-        tfm_vprintf
-        platform_common_interface
 )
