--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -20,6 +20,7 @@ target_sources(tfm_sprt
     PUBLIC
         $<$<BOOL:${CONFIG_GNU_SYSCALL_STUB_ENABLED}>:${CMAKE_SOURCE_DIR}/platform/ext/common/syscalls_stub.c>
     PRIVATE
+        assert.c
         crt_memcmp.c
         crt_memmove.c
         crt_strnlen.c
