SPM: Print the build timestamp as INFO_RAW
Get a build timestamp through CMake and get it printed
alongside the TF-M version using the same logging level

Signed-off-by: Antonio de Angelis <Antonio.deAngelis@arm.com>
Change-Id: I1339d4f12432aa967765ccb662a5cdd8f7257486

--- a/secure_fw/spm/CMakeLists.txt
+++ b/secure_fw/spm/CMakeLists.txt
@@ -26,7 +26,10 @@ add_library(tfm_arch INTERFACE)
 
 add_dependencies(tfm_spm manifest_tool)
 
-# Generate TF-M version
+# Get current time as a timestamp
+string(TIMESTAMP BUILD_TIMESTAMP "%a %d %b %Y %H:%M:%S" UTC)
+
+# Generate TF-M version and timestamp strings
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/tfm_version.h.in
                ${CMAKE_BINARY_DIR}/generated/secure_fw/spm/include/tfm_version.h)
 
