--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,6 +1,5 @@
 #-------------------------------------------------------------------------------
-#
-# Copyright (c) 2023, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -19,6 +18,14 @@ build:
     python: "3.11"
   apt_packages:
     - plantuml
+  jobs:
+      create_environment:
+         - asdf plugin add uv
+         - asdf install uv latest
+         - asdf global uv latest
+         - uv venv
+      install:
+         - uv pip install ".[docs]"
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
@@ -28,8 +35,3 @@ sphinx:
 formats:
    - pdf
    - htmlzip
-
-# Configuration of the Python environment
-python:
-   install:
-   - requirements: docs/requirements.txt
