LIB: Link tfm_vprintf_headers to logging headers
Link this target which provides the tfm_vprintf headers to each of the
logging library header targets. This prevents users of the logging
libraries from having to explicitly link both of the header targets.

Change-Id: I043e51cdb1567fcb971e480474dfebf46c7688a8
Signed-off-by: Jackson Cooper-Driver <jackson.cooper-driver@arm.com>

--- a/lib/tfm_log/CMakeLists.txt
+++ b/lib/tfm_log/CMakeLists.txt
@@ -20,6 +20,11 @@ target_include_directories(tfm_log_headers
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/inc>
 )
 
+target_link_libraries(tfm_log_headers
+    INTERFACE
+        tfm_vprintf_headers
+)
+
 target_link_libraries(tfm_log
     INTERFACE
         tfm_log_headers
