Codespell: Fix spelling in platform/ext/accelerator
Periodic effort to reduce spelling errors in the codebase.

Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>
Change-Id: I3cddc467d50a748eb6e4d2633fd5e32f571838e4

--- a/platform/ext/accelerator/cc312/CMakeLists.txt
+++ b/platform/ext/accelerator/cc312/CMakeLists.txt
@@ -157,7 +157,7 @@ if (TFM_PARTITION_CRYPTO)
                 platform_s
         )
 
-        # Platform depedency needed to access platform specific dx_reg_base_host.h
+        # Platform dependency needed to access platform specific dx_reg_base_host.h
         set(CC312_PLATFORM_DEPENDENCY platform_s)
 
         set(SAVED_BUILD_TYPE ${CMAKE_BUILD_TYPE})
