Build: Use project definition for exit
Previously, the newlib-nano implementation of `exit` of used and it's
disassembly would look like (as of Arm GNU Toolchain 13.3.Rel1):

```
3100a964 <exit>:
3100a964:	b508      	push	{r3, lr}
3100a966:	4b06      	ldr	r3, [pc, #24]	@ (3100a980 <exit+0x1c>)
3100a968:	4604      	mov	r4, r0
3100a96a:	b113      	cbz	r3, 3100a972 <exit+0xe>
3100a96c:	2100      	movs	r1, #0
3100a96e:	f3af 8000 	nop.w
3100a972:	4b04      	ldr	r3, [pc, #16]	@ (3100a984 <exit+0x20>)
3100a974:	681b      	ldr	r3, [r3, #0]
3100a976:	b103      	cbz	r3, 3100a97a <exit+0x16>
3100a978:	4798      	blx	r3
3100a97a:	4620      	mov	r0, r4
3100a97c:	f000 f98c 	bl	3100ac98 <_exit>
3100a980:	00000000 	.word	0x00000000
3100a984:	3101a874 	.word	0x3101a874
```

Which is similar to the implementation of `exit` seen with
disassembly of `libc_nano.a` (libc implementation when using
`-specs=nano.specs` with gcc):

```
00000000 <exit>:
   0:	b508      	push	{r3, lr}
   2:	4b06      	ldr	r3, [pc, #24]	@ (1c <exit+0x1c>)
   4:	4604      	mov	r4, r0
   6:	b113      	cbz	r3, e <exit+0xe>
   8:	2100      	movs	r1, #0
   a:	f7ff fffe 	bl	0 <__call_exitprocs>
   e:	4b04      	ldr	r3, [pc, #16]	@ (20 <exit+0x20>)
  10:	681b      	ldr	r3, [r3, #0]
  12:	b103      	cbz	r3, 16 <exit+0x16>
  14:	4798      	blx	r3
  16:	4620      	mov	r0, r4
  18:	f7ff fffe 	bl	0 <_exit>
	...
```

With the commit the `exit()` function is plumbed to `psa_panic()` in the
secure world. The resultant disassembly now looks like from GCC:

```
120011d0 <exit>:
120011d0:	b508      	push	{r3, lr}
120011d2:	f7ff fa81 	bl	120006d8 <psa_panic>
120011d6:	bd08      	pop	{r3, pc}
```

Disassembly from llvm (clang):

```
10081490 <exit>:
10081490:	b580      	push	{r7, lr}
10081492:	466f      	mov	r7, sp
10081494:	f7ff f9b6 	bl	10080804 <psa_panic>
10081498:	bd80      	pop	{r7, pc}
1008149a:	d4d4      	bmi.n	10081446 <memcmp+0xe>
```

Default implementation of `exit` for ARM compiler 6.21 disassembly looks
like:

```
00

--- a/secure_fw/partitions/lib/runtime/CMakeLists.txt
+++ b/secure_fw/partitions/lib/runtime/CMakeLists.txt
@@ -25,7 +25,7 @@ target_sources(tfm_sprt
         crt_memmove.c
         crt_strnlen.c
         $<$<C_COMPILER_ID:Clang>:crt_start.c>
-        $<$<C_COMPILER_ID:Clang>:crt_exit.c>
+        crt_exit.c
         $<$<C_COMPILER_ID:Clang>:crt_strlen.c>
         crt_vprintf.c
         service_api.c
