platform: common: Fix some mispelling
Fix the following mispell:
 - Restict ==> Restrict
 - triggerred ==> triggered
 - trough ==> through
 - customzied ==> customized

Indentation improved on "test_interrupt.c" as well.

Signed-off-by: Nicola Mazzucato <nicola.mazzucato@arm.com>
Change-Id: Id5de89c569f3bf0a6a2fedcee0ff359ca42bd4ae

--- a/platform/ext/common/armclang/tfm_isolation_s.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_s.sct.template
@@ -24,7 +24,7 @@
  *  ER : A typical execution region.
  *  PT : An empty execution region used as position-tag/address-alignment.
  *
- * No applying customzied prefixes on linker/system reserved/intentional
+ * No applying customized prefixes on linker/system reserved/intentional
  * names, such as 'ARM_LIB_STACK'.
  */
 
