--- a/platform/ext/common/armclang/tfm_isolation_s.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_s.sct.template
@@ -47,11 +47,18 @@ LR_CODE S_CODE_START S_CODE_SIZE {
     PT_RO_START +0 ALIGN TFM_LINKER_PT_RO_ALIGNMENT EMPTY 0x0 {
     }
 
+#ifdef S_CODE_VECTOR_TABLE_SIZE
     ER_VECTORS S_CODE_START S_CODE_VECTOR_TABLE_SIZE {
+#else
+    ER_VECTORS S_CODE_START {
+#endif
         *.o (RESET +First)
     }
+
+#ifdef S_CODE_VECTOR_TABLE_SIZE
     ER_VECTORS_FILL +0 FILL 0x0 (S_CODE_VECTOR_TABLE_SIZE - ImageLength(ER_VECTORS)) {
     }
+#endif
 
     /* Position tag: Start of unprivileged code (shared, not PXN) */
     PT_UNPRIV_CODE_START +0 ALIGN TFM_LINKER_PT_UNPRIV_CODE_ALIGNMENT EMPTY 0x0 {
