BL2: Update key id mapping for built in keys
For MCUBOOT_BUILTIN_KEY, create config for secure and non-secure key id.
This will be added to image as separate TLV entry. It will be parsed by
mcuboot during verification and will be used to load key from OTP.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: Ia6148a993c908d0306461e91e449a0582fecaeaa

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -77,6 +77,9 @@ target_sources(bl2
 target_compile_definitions(bl2
     PRIVATE
         MCUBOOT_SIGNATURE_TYPE=${MCUBOOT_SIGNATURE_TYPE}
+        $<$<BOOL:${MCUBOOT_BUILTIN_KEY}>:TFM_S_KEY_ID=${TFM_S_KEY_ID}>
+        $<$<BOOL:${MCUBOOT_BUILTIN_KEY}>:TFM_NS_KEY_ID=${TFM_NS_KEY_ID}>
+        MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE=${MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE}
 )
 
 target_link_libraries(bl2
@@ -216,7 +219,6 @@ if (PLATFORM_DEFAULT_IMAGE_SIGNING)
     )
 
     if(MCUBOOT_BUILTIN_KEY)
-        set(TFM_S_KEY_ID 0)
         set(wrapper_args ${wrapper_args} --psa-key-ids ${TFM_S_KEY_ID})
     endif()
 
