--- a/config/spe_config.cmake.in
+++ b/config/spe_config.cmake.in
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2023, Arm Limited. All rights reserved.
+# SPDX-FileCopyrightText: Copyright The TrustedFirmware-M Contributors
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -24,6 +24,8 @@ set(BL2                                    @BL2@)
 set(BL2_HEADER_SIZE                        @BL2_HEADER_SIZE@)
 set(BL2_TRAILER_SIZE                       @BL2_TRAILER_SIZE@)
 set(MCUBOOT_IMAGE_NUMBER                   @MCUBOOT_IMAGE_NUMBER@)
+set(TFM_S_KEY_ID                           @TFM_S_KEY_ID@)
+set(TFM_NS_KEY_ID                          @TFM_NS_KEY_ID@)
 set(MCUBOOT_CONFIRM_IMAGE                  @MCUBOOT_CONFIRM_IMAGE@)
 set(MCUBOOT_ENC_IMAGES                     @MCUBOOT_ENC_IMAGES@)
 set(MCUBOOT_ENC_KEY_LEN                    @MCUBOOT_ENC_KEY_LEN@)
@@ -35,6 +37,7 @@ set(MCUBOOT_S_IMAGE_MIN_VER                @MCUBOOT_S_IMAGE_MIN_VER@)
 
 set(MCUBOOT_MEASURED_BOOT                  @MCUBOOT_MEASURED_BOOT@)
 set(MCUBOOT_HW_KEY                         @MCUBOOT_HW_KEY@)
+set(MCUBOOT_BUILTIN_KEY                    @MCUBOOT_BUILTIN_KEY@)
 
 set(MCUBOOT_SECURITY_COUNTER_S             @MCUBOOT_SECURITY_COUNTER_S@)
 set(MCUBOOT_IMAGE_VERSION_S                @MCUBOOT_IMAGE_VERSION_S@)
