BL2: Enable Multi-Signature Support for Built-in keys
This patch introduces multi-signature support for built-in keys,
enabling the use of multiple keys per image (of the same type) for
signature verification.

->  All changes enabled when MCUBOOT_IMAGE_MULTI_SIG_SUPPORT is defined.

->  Secure image is signed with additional key (NS key).
    Related key id is added to the image TLV and parsed by MCUboot
    to retrieve the material from OTP.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: Ia27d0d4b630069cf2d2372bf7b31e9b86a2f4a1e

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -80,6 +80,7 @@ target_compile_definitions(bl2
         $<$<BOOL:${MCUBOOT_BUILTIN_KEY}>:TFM_S_KEY_ID=${TFM_S_KEY_ID}>
         $<$<BOOL:${MCUBOOT_BUILTIN_KEY}>:TFM_NS_KEY_ID=${TFM_NS_KEY_ID}>
         MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE=${MCUBOOT_ROTPK_MAX_KEYS_PER_IMAGE}
+        $<$<BOOL:${MCUBOOT_IMAGE_MULTI_SIG_SUPPORT}>:MCUBOOT_IMAGE_MULTI_SIG_SUPPORT>
 )
 
 target_link_libraries(bl2
@@ -220,6 +221,13 @@ if (PLATFORM_DEFAULT_IMAGE_SIGNING)
 
     if(MCUBOOT_BUILTIN_KEY)
         set(wrapper_args ${wrapper_args} --psa-key-ids ${TFM_S_KEY_ID})
+        if(MCUBOOT_IMAGE_MULTI_SIG_SUPPORT AND PLATFORM_DEFAULT_ROTPK)
+            set(wrapper_args ${wrapper_args} --psa-key-ids ${TFM_NS_KEY_ID})
+        endif()
+    endif()
+
+    if(MCUBOOT_IMAGE_MULTI_SIG_SUPPORT)
+        set(wrapper_args ${wrapper_args} -k ${MCUBOOT_KEY_NS})
     endif()
 
     add_custom_command(OUTPUT tfm_s_signed.bin
