BL2: Provision RoTPK sign policies
For multisignature, if policy support is enabled, provision the
corresponding key policy to the OTP.

For built in keys, also check the signature verification result
against the policy.

Signed-off-by: Maulik Patel <maulik.patel@arm.com>
Change-Id: If91a5967f3cea59cb12546c25f53280a2c7d4cb2

--- a/bl2/CMakeLists.txt
+++ b/bl2/CMakeLists.txt
@@ -94,6 +94,11 @@ list(APPEND BL2_CRYPTO_SRC
 
 add_library(bl2_crypto STATIC ${BL2_CRYPTO_SRC})
 
+target_compile_definitions(bl2_crypto
+    PRIVATE
+        $<$<BOOL:${MCUBOOT_ROTPK_SIGN_POLICY}>:MCUBOOT_ROTPK_SIGN_POLICY>
+)
+
 target_include_directories(bl2_crypto
     PUBLIC
         ${MBEDCRYPTO_PATH}/library
