Build: Update method for remote content fetching
FetchContent_Populate() is deprecated as of CMake 3.30. This change
updates the build system to use FetchContent_MakeAvailable() instead,
following the latest CMake guidelines.

Signed-off-by: Anton Komlev <anton.komlev@arm.com>
Change-Id: I70bfa9cd8c793bba6dfb19c2aaa7efe26abf8592

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -7,6 +7,16 @@
 
 cmake_minimum_required(VERSION 3.21)
 
+fetch_remote_library(
+    LIB_NAME                mcuboot
+    LIB_SOURCE_PATH_VAR     MCUBOOT_PATH
+    FETCH_CONTENT_ARGS
+        GIT_REPOSITORY      https://github.com/mcu-tools/mcuboot.git
+        GIT_TAG             ${MCUBOOT_VERSION}
+        GIT_PROGRESS        TRUE
+        GIT_SUBMODULES      "${MCUBOOT_SUBMODULES}"
+)
+
 add_library(mcuboot_config INTERFACE)
 
 set(MCUBOOT_KEY_ENC "${MCUBOOT_PATH}/enc-rsa2048-pub.pem" CACHE FILEPATH "Path to key with which to encrypt binary")
