Platform: fix file exclusion in tf-m linker script
Based on ld spec [0] (page 82):
"""
you can put the EXCLUDE_FILE command inside a sorting command, but not the
other way around.
"""

Fix this in the linker script to achieve proper exclusion.

[0]: https://sourceware.org/binutils/docs/ld.pdf

Change-Id: Id72eaeca88399ce7b76b38fc33f095d0b02c97c5
Signed-off-by: Amjad Ouled-Ameur <amjad.ouled-ameur@arm.com>

--- a/platform/ext/common/gcc/tfm_isolation_s.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_s.ld.template
@@ -269,7 +269,7 @@ SECTIONS
         /* Capture all remaining code (except RAM code) in the privileged TF-M
          * code region.
          */
-        EXCLUDE_FILE (*libflash_drivers*:) *(SORT_BY_ALIGNMENT(.text*))
+        *(SORT_BY_ALIGNMENT(EXCLUDE_FILE(*libflash_drivers*) .text*))
     } > FLASH
 
     /* Position tag: End of PSA RoT code (privileged) */
@@ -283,7 +283,7 @@ SECTIONS
     /* Collect all RO-data into a single unprivileged region */
     .ER_RO_DATA . :
     {
-        EXCLUDE_FILE (*libflash_drivers*:) *(SORT_BY_ALIGNMENT(.rodata*))
+        *(SORT_BY_ALIGNMENT(EXCLUDE_FILE(*libflash_drivers*) .rodata*))
     } > FLASH
 
     /**** Section for holding partition RO load data */
