platform: use linker macro KEEP to add symbols from file
Not using KEEP does not force the linker to add libflash symbols to RAM.

Change-Id: I72e2a2473fd8e8e8fff83d41468c1b91622bae00
Signed-off-by: Amjad Ouled-Ameur <amjad.ouled-ameur@arm.com>

--- a/platform/ext/common/gcc/tfm_isolation_s.ld.template
+++ b/platform/ext/common/gcc/tfm_isolation_s.ld.template
@@ -317,8 +317,8 @@ SECTIONS
     /* Flash drivers code that gets copied from Flash */
     .ER_CODE_SRAM ALIGN(S_RAM_CODE_START, 4) :
     {
-        *libflash_drivers*:(SORT_BY_ALIGNMENT(.text*))
-        *libflash_drivers*:(SORT_BY_ALIGNMENT(.rodata*))
+        KEEP(*libflash_drivers*(SORT_BY_ALIGNMENT(.text*)))
+        KEEP(*libflash_drivers*(SORT_BY_ALIGNMENT(.rodata*)))
         KEEP(*(.ramfunc))
 #if defined(S_RAM_CODE_EXTRA_SECTION_NAME)
         KEEP(*(S_RAM_CODE_EXTRA_SECTION_NAME))
