--- a/platform/ext/common/armclang/tfm_isolation_s.sct.template
+++ b/platform/ext/common/armclang/tfm_isolation_s.sct.template
@@ -229,9 +229,11 @@ LR_CODE S_CODE_START S_CODE_SIZE {
     }
 #endif
 
+#ifdef BOOT_TFM_SHARED_DATA_SIZE
     /* Shared area between BL2 and runtime to exchange data */
     TFM_SHARED_DATA +0 ALIGN TFM_LINKER_BL2_SHARED_DATA_ALIGNMENT EMPTY BOOT_TFM_SHARED_DATA_SIZE {
     }
+#endif
 #endif /* !S_DATA_PRIV_START */
 
     /* Position tag: Start of Application RoT data (unprivileged) */
@@ -292,9 +294,11 @@ LR_CODE S_CODE_START S_CODE_SIZE {
      * Move BL2 shared area to the beginning of privileged data area on
      * Armv6-M/v7-M platforms.
      */
+#ifdef BOOT_TFM_SHARED_DATA_SIZE
     /* Shared area between BL2 and runtime to exchange data */
     TFM_SHARED_DATA +0 ALIGN TFM_LINKER_BL2_SHARED_DATA_ALIGNMENT EMPTY BOOT_TFM_SHARED_DATA_SIZE {
     }
+#endif
 #endif /* S_DATA_PRIV_START */
 
     /* Position tag: Start of PSA RoT data (privileged) */
